module Entries ready

--- a/public/css/styleHead.css
+++ b/public/css/styleHead.css
@@ -198,6 +198,9 @@ a.article:hover {
     background:  #fce492;
 }
 
+#base2{
+    background:  #f8f7f2;
+}
 .update_Modal{
     background:  #f8cc50;
     border-radius: 8px;
